--- a/emacs.org
+++ b/emacs.org
@@ -1317,7 +1317,8 @@ perspective, integrates well with Emacs.
    ([remap switch-to-buffer-other-frame] . consult-buffer-other-frame)
    ("C-c f" . consult-find))
   :config
-  (setq consult-project-root-function
+  (setq consult-narrow-key "<"
+        consult-project-root-function
         (lambda ()
           (when-let (project (project-current))
             (car (project-roots project))))))
@@ -1629,15 +1630,21 @@ This is an attempt to make scrolling a bit smoother and friendlier.
 
 #+begin_src emacs-lisp
 
-(setq hscroll-margin 2
-      hscroll-step 1
-      scroll-conservatively 101
+(when (fboundp 'pixel-scroll-precision-mode)
+  (pixel-scroll-precision-mode))
+
+(setq scroll-conservatively 101
       scroll-preserve-screen-position t
-      auto-window-vscroll nil
-      mouse-wheel-follow-mouse 't         ;; scroll window under mouse
-      mouse-wheel-progressive-speed nil   ;; don't accelerate scrolling
-      mouse-wheel-scroll-amount '(1 ((shift) . 5) ((control)))
-      mouse-wheel-scroll-amount-horizontal 2)
+      mouse-wheel-follow-mouse 't)         ;; scroll window under mouse
+;; (setq hscroll-margin 2
+;;       hscroll-step 1
+;;       scroll-conservatively 101
+;;       scroll-preserve-screen-position t
+;;       auto-window-vscroll nil
+;;       mouse-wheel-follow-mouse 't         ;; scroll window under mouse
+;;       mouse-wheel-progressive-speed nil   ;; don't accelerate scrolling
+;;       mouse-wheel-scroll-amount '(1 ((shift) . 5) ((control)))
+;;       mouse-wheel-scroll-amount-horizontal 2)
 #+end_src
 
 ** Saving files, backups, etc
@@ -1734,9 +1741,10 @@ final newline in the file.
 #+begin_src emacs-lisp
 
 (show-paren-mode)
+(add-hook 'text-mode-hook 'visual-line-mode)
 (setq-default indent-tabs-mode nil
               fill-column 80
-	      require-final-newline t)
+              require-final-newline t)
 #+end_src
 
 This will join the next line with the current line and is inspired from the =J= command in Vim.
@@ -1772,7 +1780,8 @@ Lastly, display line numbers any time in a programming-related buffer.
 
 #+begin_src emacs-lisp
 (when (fboundp 'display-line-numbers-mode)
-  (add-hook 'prog-mode-hook 'display-line-numbers-mode))
+  (add-hook 'prog-mode-hook 'display-line-numbers-mode)
+  (setq-default display-line-numbers-width 3))
 #+end_src
 
 ** Page breaks
