turn off auto-fill-mode for org-mode buffers

--- a/emacs.org
+++ b/emacs.org
@@ -3374,6 +3374,7 @@ Miscellaneous notes:
   (defun my-org-mode-hook ()
     "Turn on settings for org-mode."
     (interactive)
+    (auto-fill-mode -1)
     (when (fboundp 'turn-on-auto-fill)
       (turn-on-auto-fill))
     (when (fboundp 'turn-on-flyspell)
