--- a/emacs.org
+++ b/emacs.org
@@ -131,7 +131,9 @@ relocated to /.emacs.d/var/.
 
 ;; native compilation
 (when (and (fboundp 'native-comp-available-p) (native-comp-available-p))
-  (add-to-list 'native-comp-eln-load-path (locate-user-emacs-file "var/eln"))
+  (if (fboundp 'startup-redirect-eln-cache)
+      (startup-redirect-eln-cache (convert-standard-filename (expand-file-name "var/eln-cache/" user-emacs-directory)))
+    (add-to-list 'native-comp-eln-load-path (convert-standard-filename (expand-file-name "var/eln-cache/" user-emacs-directory))))
   (setq native-comp-deferred-compilation nil)
   (setq native-comp-async-report-warnings-errors 'silent))
 
@@ -3389,6 +3391,7 @@ Miscellaneous notes:
 
   (defun init-my-org-agenda ()
     "Initialze org-agenda configuration."
+    (interactive)
     (setq org-agenda-skip-scheduled-if-deadline-is-shown t
           org-agenda-sticky t
           org-agenda-hide-tags-regexp "."
@@ -3475,6 +3478,7 @@ Miscellaneous notes:
 
   (defun init-my-org-capture-templates ()
     "Set up org-capture-templates."
+    (interactive)
     ;; For template expansion,
     ;; see https://orgmode.org/manual/Template-expansion.html#Template-expansion
     (setq org-capture-templates
