--- a/emacs.org
+++ b/emacs.org
@@ -3981,15 +3981,14 @@ I used to use [[https://github.com/bastibe/org-journal][org-journal]] for journa
   :preface
   (defun org-journal-find-location ()
     "Open today's journal file."
+    ;; For integration with org-capture ...
     ;; Open today's journal, but specify a non-nil prefix argument in order to
     ;; inhibit inserting the heading; org-capture will insert the heading.
     ;; This should also get org-mode to the right place to add a heading at the correct depth
     (org-journal-new-entry t)
+    (unless (eq org-journal-file-type 'daily)
+      (org-narrow-to-subtree))
     (goto-char (point-max)))
-  ;; Position point on the journal's top-level heading so that org-capture
-  ;; will add the new entry as a child entry.
-  ;; (goto-char (point-max)))
-
   :init
   (setq org-journal-dir (concat org-directory "/journal/")
         org-journal-file-type 'yearly
